--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ Jinja2==2.1.1
 coverage==3.0.1
 -e git://github.com/dbravender/gp_through_unit_tests.git@7b2625470f08e033cd0c562129ce8592da08eadf#egg=gp_through_unit_tests-0.1-py2.6-7b2625470f08e033cd0c562129ce8592da08eadf
 nose==0.11.1
+simplejson==2.0.9
 wsgiref==0.1.2
