--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="us.bravender.android.dongsa"
-      android:versionCode="1"
-      android:versionName="1.0">
+      android:versionCode="1" android:versionName="1.1">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".Dongsa"
                   android:label="@string/app_name">
@@ -16,4 +15,7 @@
 
 
 <uses-sdk android:minSdkVersion="2" android:targetSdkVersion="2"></uses-sdk>
+
+
+
 </manifest> 
