--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="us.bravender.android.dongsa"
-      android:versionName="1.1" android:versionCode="2">
+      android:versionName="1.2" android:versionCode="3">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".Dongsa"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:configChanges="keyboard|keyboardHidden|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -18,4 +19,4 @@
 
 
 
-</manifest> 
+</manifest>
